# general_pupose_chatbot

./: .env.example  README.md  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
